# iroh

./: Cargo.toml  localderper.config.toml
.github/workflows/: tests.yaml
iroh/: Cargo.toml
iroh-bytes/: Cargo.toml
iroh-bytes/src/: baomap.rs
iroh-bytes/src/store/: file.rs  flat.rs
iroh-cli/: Cargo.toml
iroh-cli/src/commands/: doctor.rs
iroh-gossip/examples/: chat.rs
iroh-gossip/src/: net.rs
iroh-net/: Cargo.toml
iroh-net/bench/: Cargo.toml
iroh-net/bench/src/: iroh.rs  lib.rs  quinn.rs  s2n.rs
iroh-net/examples/: magic.rs
iroh-net/src/: key.rs  lib.rs  magic_endpoint.rs  magicsock.rs  netcheck.rs  tests.rs
iroh-net/src/derp/: client.rs  clients.rs  http.rs
iroh-net/src/magicsock/: derp_actor.rs  endpoint.rs  peer_map.rs
iroh-net/src/netcheck/: reportgen.rs
iroh-sync/src/: actor.rs  lib.rs  ranger.rs  store.rs  sync.rs
iroh-sync/src/store/: fs.rs
iroh/examples/: README.md  collection.rs
iroh/src/: client.rs  collection.rs  doc_snapshot.rs  lib.rs  node.rs  rpc_protocol.rs  sync_engine.rs
iroh/src/baomap/: flat.rs  mem.rs  readonly_mem.rs
iroh/src/client/: quic.rs
iroh/src/commands/: doc.rs  doctor.rs  node.rs  start.rs
iroh/src/node/: rpc.rs  storage.rs
iroh/src/sync_engine/: live.rs
iroh/tests/: cli.rs  gc.rs  provide.rs  sync.rs
miroh/: Cargo.toml
miroh/src/: lib.rs  main.rs
src/: config.rs  lib.rs  main.rs  net.rs
src/hp/: dns.rs  hostinfo.rs  magicsock.rs  netcheck.rs
src/net/: interfaces.rs
src/porcelain/: mod.rs  util.rs
src/provider/: database.rs  mod.rs
tests/: cli.rs  command.rs
(+8 files in other folders)
