[package]
name = "miroh"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
derive_more = { version = "1.0.0-beta.1", features = ["debug", "display", "from", "try_into", "from_str"] }
num_cpus = { version = "1.15.0" }
iroh = { path = "../iroh", version = "0.9.0" }
quinn = "0.10"
quic-rpc = { version = "0.6", default-features = false, features = ["flume-transport", "quinn-transport"] }
serde = { version = "1", features = ["derive"] }
strum = { version = "0.25", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["codec", "io-util", "io", "time"] }